# voxel-physics

./: .gitignore  CMakeLists.txt  README.md  build_run.sh  install.sh
voxel-physics/: Camera.h  Easing.h  FrameBuffer.h  GUI.h  IndexBuffer.h  Logger.h  Main.cpp  Math.h  PointLight.h  RenderBuffer.h  Shader.h  Texture.h  Texture2D.h  Types.h  Utils.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h  Voxel.cpp  Voxel.h  Window.h  glad.cpp  imgui.ini  imgui_impl_opengl3.cpp  voxel-physics.sln  voxel-physics.vcxproj  voxel-physics.vcxproj.filters
voxel-physics/assets/shaders/: frag.glsl  vert.glsl
voxel-physics/libraries/include/glad/: glad.h
voxel-physics/libraries/lib/: glfw3.lib
voxel-physics/x64/Debug/: vc142.idb  voxel-physics.exe.recipe  voxel-physics.vcxproj.FileListAbsolute.txt
voxel-physics/x64/Debug/voxel-physics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  voxel-physics.lastbuildstate
voxel-physics/x64/Release/: voxel-physics.exe.recipe  voxel-physics.iobj  voxel-physics.ipdb  voxel-physics.vcxproj.FileListAbsolute.txt
voxel-physics/x64/Release/voxel-physics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  voxel-physics.lastbuildstate  voxel-physics.write.1u.tlog
